clusters/k3s_lab/apache/full.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-webserver
  namespace: default
  labels:
    app: apache-webserver
spec:
  replicas: 4
  selector:
    matchLabels:
      app: apache-webserver
  template:
    metadata:
      labels:
        app: apache-webserver
    spec:
      containers:
      - name: apache
        image: j123qwe/apache-k8s:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - apache-webserver
            topologyKey: "kubernetes.io/hostname"
      nodeSelector:
        nodeType: utility
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-webserver-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: ha.gogo.yoducks.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: apache-webserver
                port:
                  number: 80
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: apache-webserver
  namespace: default
spec:
  selector:
    app: apache-webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
